Add welcome message and creator info to headerAdd demo student and teacher login page

--- a/index.html
+++ b/index.html
@@ -72,8 +72,12 @@
 <body>
 
 <header>
+  <header>
   <h1>Study Bird 🐦</h1>
   <p>Learning for Life</p>
+  <p><strong>Welcome from Haron</strong></p>
+  <p>Created by Harun</p>
+  </header>
 </header>
 
 <div class="info">
