--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <h1>Study Bird 🐦</h1>
   <p>Learning for Life</p>
   <p><strong>Welcome from Haron</strong></p>
-  <p>Created by Harun</p>
+  <p>Created by Haron</p>
   </header>
 </header>
 
